test/libsolidity/syntaxTests/dataLocations/externalFunction/function_argument_location_specifier_test_external_transient.sol
contract test {
    function f(bytes transient) external;
}
// ----
// TypeError 6651: (31-46): Data location must be "memory" or "calldata" for parameter in external function, but none was given.
